# wyc79.github.io

./: .gitignore  LICENSE  aegis-sword.html  automatic-differentiation.html  game-design-workshop.html  gyrotris.html  index.html  nothing-can-go-wrong.html  styles.css  toolbox.html
.claude/: settings.local.json
chat/: .env.example  .gitignore  README.md  build.py  pyproject.toml
chat/data/: fallback_vectors.json  index.json  roles.json
chat/functions/tencent/: build_package.py  index.py  scf_bootstrap
chat/knowledge/: about.md  about_en.md  about_zh.md
chat/knowledge_zh/: gate.md
chat/scripts/: build_index.py
chat/src/portfolio_rag/: __init__.py  chunker.py  config.py  embedder.py  gate_calibration.py  index_builder.py  loader.py  roles.py
chat/tests/: test_chunker.py  test_embedder.py  test_gate.py  test_index_builder.py  test_loader.py
chat/worker/: worker.js  wrangler.toml
pages/: 3d-rendering.html  aegis-sword.html  automatic-differentiation.html  cemented-dreams.html  chat-agent.html  codebreaker.html  education.html  game-design-workshop.html  gyrotris.html  nothing-can-go-wrong.html  prime-engine.html  projects.html  publications.html  skills.html  toolbox.html
scripts/: analytics.js  chat-widget.js  ctin488-slideshow.js  flip-game.js  i18n.js  p3-menu.js  p3-sphere.js  page-header.js  project-hero.js  qrcode.js  slideshow.js  theme.js  wordcloud.js
