[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-rag"
version = "0.1.0"
description = "RAG pipeline for the wyc79.github.io portfolio chat agent: HTML ingestion, chunking, ONNX embeddings, static vector index."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "numpy>=1.26",
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
